# world_sphere_sim

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  vcpkg.json
embedfile/: embedfile.cpp
scripts/: build_debug.ps1  cmake_configure.ps1  vcpkg_install.ps1
shaders/sphere/: sphere_shader.frag  sphere_shader.vert
source/: cube.h  main.cpp
source/dll/: dll_function.cpp  dll_function.h  dll_function_hotswap.h
source/geometry/: sphere.h
source/sphere/: sphere_fragment_shader.vert  sphere_shader_object.cpp  sphere_shader_object.h
